<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/hamburgerMenu"
        android:icon="@drawable/hamburger"
        android:title=" "
        app:showAsAction="ifRoom"
        style="@style/typ_boldTitles">

        <menu>

            <item android:id="@+id/first_item"
                android:title="@string/menu_1"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/second_item"
                android:title="@string/menu_2"
                app:showAsAction="never"/>

            <item android:id="@+id/third_item"
                android:title="@string/menu_3"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>

